feat: display badges for verified contracts (#319)
# What ❔

* Add a green shield icon next to the `Contracts` tab title of field if
it's verified
* Update tab titles to have optional icons
* Add `Verified` badge next to contract name if it's verified

## Why ❔

To be able to quickly/easily know if a contract is verified (Closes
#142)

See an example here:
https://staging-scan-v2--pr-319-61jpzx7g.web.app/address/0x64AEB39926631F9601D78E3024D32632564C057B


![image](https://github.com/user-attachments/assets/3d1cb6eb-aef1-4d68-a362-e0b5577cceda)

Mobile screens:

![image](https://github.com/user-attachments/assets/3e74a55d-c68f-4ea4-95f8-64dd6abe07a7)


Contracts that are **not** verified:

![image](https://github.com/user-attachments/assets/802bcf97-b950-400d-81ad-28e8d3f50bac)



## Checklist

<!-- Check your PR fulfills the following items. -->
<!-- For draft PRs check the boxes as you complete them. -->

- [x] PR title corresponds to the body of PR (we generate changelog
entries from PRs).
- [x] Tests for the changes have been added / updated.
- [x] Documentation comments have been added / updated.

---------

Co-authored-by: Vasyl Ivanchuk <vasyl.ivanchuk@gmail.com>

--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -188,6 +188,8 @@
         "infoTableError": "Виникла помилка",
         "balanceTableTitle": "Мої кошти",
         "notFound": "Не знайдено",
+        "verified": "вихідний код",
+        "verifiedTooltip": "Вихідний код контракту було перевірено на відповідність його байт-коду в мережі. Перевірений вихідний код не означає, що контракт безпечний для взаємодії.",
         "transactionTable": {
             "error": "Щось пішло не так",
             "notFound": {
