--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -217,7 +217,7 @@
             "sourceCode": "Вихідний код"
         },
         "abiInteraction": {
-            "contractAbi": "ABI Контракт"
+            "contractAbi": "ABI контракту"
         }
     },
     "contractVerification": {
