--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -143,7 +143,8 @@
         "loadingInfoFailed": "Не вдалося завантажити інформацію про транзакцію",
         "transactionNotFound": "Транзакцію не знайдено",
         "transactionInfo": "Інформація про транзакцію",
-        "tryRequestAgain": "Спробуйте знову"
+        "tryRequestAgain": "Спробуйте знову",
+        "viewAll": "Переглянути всі транзакції"
     },
     "header": {
         "nav": {
