fix: rename tx created field to tx received at

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -105,8 +105,8 @@
             "transactionHashTooltip": "Transaction hash is a unique 66-character identifier that is generated whenever a transaction is executed",
             "nonce": "Nonce",
             "nonceTooltip": "Number of transactions sent from a sender address",
-            "created": "Created",
-            "createdTooltip": "The date and time at which a transaction is added to the block",
+            "receivedAt": "Received",
+            "receivedAtTooltip": "The date and time when the transaction was received",
             "sendersNonce": "Sender`s Nonce",
             "from": "From",
             "fromTooltip": "The sending party of the transaction",
