--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -77,7 +77,8 @@
             "reasonTooltip": "Причина невиконання транзакції",
             "transactionHash": "Хеш Транзакції",
             "nonce": "Нонс",
-            "created": "Створено",
+            "receivedAt": "Отримано",
+            "receivedAtTooltip": "Час коли транзакцію було отримано",
             "from": "Від",
             "to": "До",
             "block": "Блок",
