fix: update homepage title

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -669,7 +669,7 @@
   },
   "document": {
     "title": "Treasurescan",
-    "home": "Transactions, Blocks, Contracts and much more"
+    "home": "Treasure (MAGIC) Block Explorer"
   },
   "notFound": {
     "title": "Oops, we can’t find anything",
