Revert "fix: update homepage title"
This reverts commit 499f7850a1229f6c47215a7c4fcb9e28a75cef02.

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -669,7 +669,7 @@
   },
   "document": {
     "title": "Treasurescan",
-    "home": "Treasure (MAGIC) Block Explorer"
+    "home": "Transactions, Blocks, Contracts and much more"
   },
   "notFound": {
     "title": "Oops, we can’t find anything",
