--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -678,11 +678,11 @@
     "contactSupport": "contact support"
   },
   "maintenance": {
-    "title": "ZKsync {network} is on maintainance",
-    "description": "ZKsync {network} is unavailable due to maintainance, you can find updates in our {twitter} or on {uptime}",
-    "twitterLink": "ZKsync Developers",
+    "title": "{network} is on maintainance",
+    "description": "{network} is unavailable due to maintainance, you can find updates on our {twitter} or on {uptime}.",
+    "twitterLink": "Twitter",
     "uptimeLink": "UpTime",
-    "twitterButton": "ZKsync Developers"
+    "twitterButton": "Visit Twitter"
   },
   "tabs": {
     "transactions": "Transactions",
