--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -263,6 +263,14 @@
                 },
                 "underline": "Якщо ви ввімкнули оптимізацію під час компіляції, виберіть так."
             },
+            "enableEraVMExtensionsUsed": {
+                "label": "Ввімкнути EraVM Extensions",
+                "options": {
+                    "yes": "Так",
+                    "no": "Ні"
+                },
+                "underline": "Якщо ви ввімкнули EraVM Extensions під час компіляції, виберіть так."
+            },
             "solcVersion": {
                 "label": "Solc версія",
                 "placeholder": "Вибрати версію",
