fix: fe fixes, refactoring, show deployed contract for non evm-eq chains

--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -192,6 +192,9 @@
         "notFound": "Не знайдено",
         "verified": "вихідний код",
         "verifiedTooltip": "Вихідний код контракту було перевірено на відповідність його байт-коду в мережі. Перевірений вихідний код не означає, що контракт безпечний для взаємодії.",
+        "evm": "EVM",
+        "created": "Створено",
+        "contractCreated": "Контракт створено",
         "transactionTable": {
             "error": "Щось пішло не так",
             "notFound": {
