--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -331,6 +331,8 @@
         "verified": "Source Code",
         "verifiedTooltip": "The contract's source code has been verified to match its on-chain Bytecode. Source code verification does not imply the contract is safe to interact with.",
         "evm": "EVM",
+        "created": "Created",
+        "contractCreated": "Contract created",
         "evmTooltip": "This is an EVM contract.",
         "transactionTable": {
             "error": "Something went wrong",
