feat: add toggle switch between time ago and utc time

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -143,6 +143,7 @@
             "transferMethodName": "Transfer",
             "timestamp": "Timestamp",
             "age": "Age",
+            "dateTimeUTC": "Date Time (UTC)",
             "tokenAddress": "Token address",
             "tokenName": "Token name",
             "tokenSymbol": "Token symbol",
