feat: add token page

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -321,6 +321,9 @@
     "addressView": {
         "title": "Address"
     },
+    "tokenView": {
+        "title": "Token"
+    },
     "contract": {
         "title": "Contract",
         "contractNumber": "Contract ",
