--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -386,6 +386,9 @@
     "addressView": {
         "title": "Адреса"
     },
+    "tokenView": {
+        "title": "Токен"
+    },
     "accountView": {
         "title": "Профіль",
         "infoTableError": "Виникла помилка",
