feat: add holders page

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -598,6 +598,15 @@
             "tokenAddress": "Token Address"
         }
     },
+    "tokenHolders": {
+        "notFound": "Token doesn't have any holders at this moment",
+        "table": {
+            "address": "Address",
+            "balance": "Quantity",
+            "percentage": "Percentage",
+            "value": "Value"
+        }
+    },
     "pageError": {
         "title": "Something went wrong",
         "subtitle": "Unknown request, please try again, or go to the homepage.",
@@ -693,7 +702,8 @@
         "transactions": "Transactions",
         "contract": "Contract",
         "events": "Events",
-        "transfers": "Transfers"
+        "transfers": "Transfers",
+        "holders": "Holders"
     },
     "contractInfoTabs": {
         "contract": "Contract",
