--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -356,6 +356,15 @@
             "tokenAddress": "Адреса Токена"
         }
     },
+    "tokenHolders": {
+        "notFound": "Для даного токена токен-власники відсутні на цей момент",
+        "table": {
+            "address": "Адреса",
+            "balance": "Баланс",
+            "percentage": "Відсоток",
+            "value": "Вартість"
+        }
+    },
     "timeMessages": {
         "justNow": "щойно",
         "past": "тому",
@@ -431,7 +440,10 @@
     },
     "tabs": {
         "transactions": "Транзакції",
-        "contract": "Контракт"
+        "contract": "Контракт",
+        "events": "Події",
+        "transfers": "Трансфери",
+        "holders": "Власники"
     },
     "debuggerTool": {
         "title": "zkEVM Налагоджувач",
