--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -61,7 +61,7 @@
             "from": "Від",
             "direction": "Напрямок",
             "to": "До",
-            "amount": "Кількість",
+            "amountOrItem": "Кількість/Предмет",
             "value": "Сума"
         }
     },
