feat: show token l1 address in tokens list

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -599,7 +599,8 @@
         "table": {
             "tokenName": "Token Name",
             "price": "Price",
-            "tokenAddress": "Token Address"
+            "tokenAddressL2": "L2 Token address",
+            "tokenAddressL1": "L1 Token address"
         }
     },
     "pageError": {
