--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -353,7 +353,8 @@
         "table": {
             "tokenName": "Назва Токена",
             "price": "Ціна",
-            "tokenAddress": "Адреса Токена"
+            "tokenAddressL2": "L2 Адреса Токена",
+            "tokenAddressL1": "L1 Адреса Токена L1"
         }
     },
     "timeMessages": {
