feat: refactor the code and separate the state of dropdown components

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -482,7 +482,10 @@
                 "evmVersionToTarget": {
                     "label": "EVM Version to target",
                     "custom": "Custom",
-                    "inputPlaceholder": "Custom version..."
+                    "inputPlaceholder": "Custom version...",
+                    "validation": {
+                        "required": "EVM Version to target is required"
+                    }
                 }
             },
             "evmVersion": {
