--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -435,6 +435,9 @@
                     "not_valid": "Please, provide a valid contract address"
                 }
             },
+            "compilationTarget": {
+                "title": "Compilation target"
+            },
             "contractName": {
                 "label": "Contract Name",
                 "solcUnderline": "Must match the name specified in the code. For example, in contract MyContract { '{..}' } MyContract is the contract name.",
@@ -453,6 +456,10 @@
                     "required": "Contract path is required"
                 }
             },
+            "runs": {
+                "label": "Runs",
+                "underline": "Optimize for how many times you intend to run the code. Lower values will optimize more for initial deployment cost, higher values will optimize more for high-frequency usage."
+            },
             "optimizationUsed": {
                 "label": "Optimization",
                 "options": {
@@ -468,7 +475,8 @@
                     "required": "Solc version is required"
                 },
                 "error": "Unable to get list of supported Solc versions",
-                "zkVM": "zkVM"
+                "zkVM": "Use zkVM solc",
+                "EVM": "EVM"
             },
             "zksolcVersion": {
                 "label": "Zksolc Version",
@@ -477,7 +485,15 @@
                     "required": "Zksolc version is required"
                 },
                 "error": "Unable to get list of supported Zksolc versions",
-                "details": "Details"
+                "details": "Details",
+                "evmVersion": {
+                    "label": "EVM Version",
+                    "custom": "Custom",
+                    "inputPlaceholder": "Custom version...",
+                    "validation": {
+                        "required": "EVM Version is required"
+                    }
+                }
             },
             "vyperVersion": {
                 "label": "Vyper Version",
@@ -494,7 +510,13 @@
                     "required": "Zkvyper version is required"
                 },
                 "error": "Unable to get list of supported Zkvyper versions",
-                "details": "Details"
+                "details": "Details",
+                "evmVersion": {
+                    "label": "EVM Version",
+                    "validation": {
+                        "required": "EVM Version is required"
+                    }
+                }
             },
             "compilerType": {
                 "label": "Compiler type",
