--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -372,6 +372,9 @@
             "singleFileContract": "Single file contract",
             "fileLabel": "File {index} of {total}: {fileName}"
         },
+        "settings": {
+            "label": "Settings"
+        },
         "events": {
             "txnHash": "txn hash",
             "method": "method",
@@ -563,7 +566,14 @@
             "compilerVersion": "Compiler Version",
             "zksolcVersion": "Zksolc Version",
             "zkvyperVersion": "Zkvyper Version",
-            "optimization": "Optimization",
+            "evmVersion": "EVM Version",
+            "optimization": {
+                "title": "Optimization",
+                "enabled": "Yes",
+                "disabled": "No",
+                "runsTemplate": ", with {runs} runs",
+                "modeTemplate": ", with mode {mode}"
+            },
             "autoVerified": "The contract wasn't manually verified, but its bytecode matches the bytecode of the following contract:",
             "partialVerification": "Contract is partially verified: the contract metadata hash and/or constructor arguments do not match. Partial verification provides less guarantees about the authenticity of the code.",
             "partialVerificationDetails": "See more details"
