--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -1,6 +1,6 @@
 {
     "general": {
-        "l2NetworkName": "ZKsync Era",
+        "l2NetworkName": "Revolution",
         "l1NetworkName": "Ethereum"
     },
     "copyButton": {
@@ -177,7 +177,7 @@
         "subtitle": "zkRollups значно дешевше, ніж L1 або Optimistic Rollups"
     },
     "blockExplorer": {
-        "title": "ZKsync Era Провідник",
+        "title": "Revolution Провідник",
         "subtitle": "Переглядайте в режимі реального часу інформацію про блоки, транзакції, контракти та іншу активність у мережі.",
         "latestBlocks": "Останні Блоки",
         "latestTransactions": "Останні транзакції"
@@ -356,11 +356,11 @@
             "tokenAddress": "Адреса Токена",
             "bridged": {
                 "title": "Бридж",
-                "tooltip": "Цей токен перенесений з L1 до ZKsync Era"
+                "tooltip": "Цей токен перенесений з L1 до Revolution"
             },
             "native": {
                 "title": "L2-нативний",
-                "tooltip": "Цей токен є нативним для ZKsync Era"
+                "tooltip": "Цей токен є нативним для Revolution"
             },
             "tokenAddressL2": "L2 Адреса Токена",
             "tokenAddressL1": "L1 Адреса Токена"
@@ -430,7 +430,7 @@
         }
     },
     "document": {
-        "title": "ZKsync Era Провідник",
+        "title": "Revolution Провідник",
         "home": "Транзакції, Блоки, Контракти та інше"
     },
     "notFound": {
