feat: rework token page

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -324,6 +324,7 @@
     },
     "tokenView": {
         "title": "Token",
+        "token": "Token",
         "table": {
             "market": {
                 "marketCap": "Market Cap",
