--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -407,6 +407,7 @@
     },
     "tokenView": {
         "title": "Токен",
+        "token": "Токен",
         "table": {
             "market": {
                 "marketCap": "Капіталізація ринку",
