feat: simple token page (#404)
# What ❔

Add simple token page

---------

Co-authored-by: Nikola Pavlov <nikola@txfusion.io>
Co-authored-by: Nikola Pavlov <144679078+tx-nikola@users.noreply.github.com>
Co-authored-by: Marko Arambasic <marko@txfusion.io>

--- a/packages/app/src/locales/en.json
+++ b/packages/app/src/locales/en.json
@@ -322,6 +322,25 @@
     "addressView": {
         "title": "Address"
     },
+    "tokenView": {
+        "title": "Token",
+        "token": "Token",
+        "table": {
+            "market": {
+                "marketCap": "Market Cap",
+                "totalSupply": "Total Supply",
+                "circulatingSupply": "Circulating Supply Market Cap",
+                "price": "Price",
+                "decimals": "Decimals"
+            },
+            "overview": {
+                "holders": "Holders",
+                "maxTotalSupply": "Max Total Supply",
+                "totalTransfers": "Total Transfers",
+                "tokenContract": "Token Contract"
+            }
+        }
+    },
     "contract": {
         "title": "Contract",
         "contractNumber": "Contract ",
@@ -644,6 +663,15 @@
             "tokenAddressL1": "L1 Token address"
         }
     },
+    "tokenHolders": {
+        "notFound": "Token doesn't have any holders at this moment",
+        "table": {
+            "address": "Address",
+            "balance": "Quantity",
+            "percentage": "Percentage",
+            "value": "Value"
+        }
+    },
     "pageError": {
         "title": "Something went wrong",
         "subtitle": "Unknown request, please try again, or go to the homepage.",
@@ -739,7 +767,8 @@
         "transactions": "Transactions",
         "contract": "Contract",
         "events": "Events",
-        "transfers": "Transfers"
+        "transfers": "Transfers",
+        "holders": "Holders"
     },
     "contractInfoTabs": {
         "contract": "Contract",
