--- a/packages/app/src/locales/uk.json
+++ b/packages/app/src/locales/uk.json
@@ -366,6 +366,15 @@
             "tokenAddressL1": "L1 Адреса Токена"
         }
     },
+    "tokenHolders": {
+        "notFound": "Для даного токена токен-власники відсутні на цей момент",
+        "table": {
+            "address": "Адреса",
+            "balance": "Баланс",
+            "percentage": "Відсоток",
+            "value": "Вартість"
+        }
+    },
     "timeMessages": {
         "justNow": "щойно",
         "past": "тому",
@@ -395,6 +404,25 @@
     },
     "addressView": {
         "title": "Адреса"
+    },
+    "tokenView": {
+        "title": "Токен",
+        "token": "Токен",
+        "table": {
+            "market": {
+                "marketCap": "Капіталізація ринку",
+                "totalSupply": "Загальна кількість",
+                "circulatingSupply": "Обігова кількість",
+                "price": "Ціна",
+                "decimals": "Десяткові"
+            },
+            "overview": {
+                "holders": "Власники",
+                "maxTotalSupply": "Максимальна загальна кількість",
+                "totalTransfers": "Загальна кількість трансферів",
+                "tokenContract": "Контракт Токена"
+            }
+        }
     },
     "accountView": {
         "title": "Профіль",
@@ -441,7 +469,10 @@
     },
     "tabs": {
         "transactions": "Транзакції",
-        "contract": "Контракт"
+        "contract": "Контракт",
+        "events": "Події",
+        "transfers": "Трансфери",
+        "holders": "Власники"
     },
     "debuggerTool": {
         "title": "zkEVM Налагоджувач",
